# cicor

./: .editorconfig  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apis/accounting/: Dockerfile  database.py  main.py  models.py  requirements.txt
apis/commercial/: database.py  main.py  models.py
apis/hr/: Dockerfile  database.py  main.py  models.py  requirements.txt
apis/inventory/: database.py  main.py  models.py  requirements.txt
apis/operations/: Dockerfile  database.py  main.py  models.py
apis/tests/: README.md  conftest.py  test_commercial_sales.py
databases/accounting/: Dockerfile  entrypoint.sh  init.sql
databases/commercial/: Dockerfile  entrypoint.sh
databases/hr/: Dockerfile  init.sql
databases/inventory/: Dockerfile
databases/operations/: Dockerfile  entrypoint.sh  init.sql
docs/: api-reference.md  aws-deployment.md  deployment.md  design-system.md  development.md  presentation.md  v3-index.md  v3-readme.md  vision-aws.md
docs/design/: mision_1.md  mision_2.md
frontend/: .eslintrc.json  nginx.conf  package.json  repomix-output.xml  vite.config.js
frontend/src/: App.jsx
kubernetes/: README.md
kubernetes/releases/: README.md
nginx/: Dockerfile
prompts/: cicor_local_project_generator.md  cicor_skills.md
prototypes/astro-todo/: docker-compose.yml
scripts/: load-images.ps1  load-images.sh
src/: docker-compose.yml
src/api/: .env.example  .gitignore
src/web/: Dockerfile  astro.config.mjs  (+2 more)
v2/: mision_1.md
v3/: .env  .gitignore  INSTALL.md  docker-compose.yml  load_images.ps1
(+79 files in other folders)
